fix scrollbar, added email notification, remove useless framework and fix error 419

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15354,10 +15354,6 @@ section {
   src: url("../fonts/tomato_grotesk/TomatoGrotesk-Thin.otf") format("truetype");
   font-weight: 100;
 }
-/*=== Layout ===*/
-::-webkit-scrollbar {
-  display: none;
-}
 
 .logo-header {
   display: flex;
